snapshots/care/data4life/hc-util-sdk-kmp/error/maven-metadata.xml.sha512
2ccf823aefa5a1a4ef7d30537d5ba796759a86cc573138e409a8b68d30ceac1397a6b9ff305313d1f26cc089fad5f317a9a872c5bde422caf3fb277d1f6d94d1